SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/CPQ_Playbook_Approval_Email_Section__c.object-meta.xml
<CustomObject>
    <description>Object to house section of Approval Email notification</description>
    <label>CPQ Playbook Approval Email Section</label>
    <nameField>
        <label>Approval Email Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Approval Email Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>