SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/Body_Text_Block_2__c.field-meta.xml
<CustomField>
    <fullName>Body_Text_Block_2__c</fullName>
    <description>Text for the second column of text of the section</description>
    <inlineHelpText>Text for the second column of text of the section. Quote Question Answers can be piped directly into text with the following format: {%QuestionVariableName%}. Approver Name can be piped in using {%Approver.Name%}</inlineHelpText>
    <label>Body (Column 2)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>