SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/Body_Text_Block_3__c.field-meta.xml
<CustomField>
    <fullName>Body_Text_Block_3__c</fullName>
    <description>Body text for block 3</description>
    <inlineHelpText>Text for the third column of text of the section. Quote Question Answers can be piped directly into text with the following format: {%QuestionVariableName%}. Approver Name can be piped in using {%Approver.Name%}</inlineHelpText>
    <label>Body (Column 3)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>