SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/CPQ_Playbook_Approval__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approval__c</fullName>
    <description>CPQ Playbook Approval in which the Email Section is used</description>
    <inlineHelpText>Playbook Approval in which the email section is used</inlineHelpText>
    <label>CPQ Playbook Approval</label>
    <referenceTo>CPQ_Playbook_Approval__c</referenceTo>
    <relationshipLabel>CPQ Playbook Approval Email Sections</relationshipLabel>
    <relationshipName>CPQ_Playbook_Approval_Email_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>