SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if section is active and should be pulled in for use in Approval Email</description>
    <inlineHelpText>Determines if section is active and should be pulled in for use in Approval Email</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>