SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/Record_Table_Query__c.field-meta.xml
<CustomField>
    <fullName>Record_Table_Query__c</fullName>
    <description>SOQL query for records to be shown in the table. The only allowed binded variable is 'quoteId' (e.g. WHERE QuoteId=:quoteId). Do NOT include spaces between field API names (e.g. SELECT Id,Test__c)</description>
    <inlineHelpText>SOQL query for records to be shown in the table. The only allowed binded variable is 'quoteId' (e.g. WHERE QuoteId=:quoteId). Do NOT include spaces between field API names (e.g. SELECT Id,Test__c)</inlineHelpText>
    <label>Record Table Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>