SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/Table_Entries_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Table_Entries_Font_Color__c</fullName>
    <description>CSS Font Color for Table Entries</description>
    <inlineHelpText>CSS Font Color for Table Entries</inlineHelpText>
    <label>Table Entries Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>