SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval_Email_Section__c/fields/Table_Headers_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Table_Headers_Font_Size__c</fullName>
    <description>CSS Font Size in px for Table Headers</description>
    <inlineHelpText>CSS Font Size in px for Table Headers (Input the number with &apos;px&apos; appended)</inlineHelpText>
    <label>Table Headers Font Size (px)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>